# tm-ai

./: Dockerfile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
app/: app.py  exceptions.py  handlers.py  logging.py  settings.py
app/api/: __init__.py  deps.py  health.py  responses.py  router.py
app/api/v1/: __init__.py  router.py
app/api/v1/analyze/: router.py  schemas.py  service.py
app/db/: __init__.py  database.py
app/llm_gateway/: __init__.py  gemini.py  schemas.py
app/media/: __init__.py  converter.py  utils.py
app/middlewares/: __init__.py  auth.py  cors.py  request.py
app/models/: __init__.py  analysis.py  enums.py
app/repositories/: __init__.py  analysis.py
app/utils/: lifespan.py
migrations/: env.py
migrations/versions/: c0fc41c60dfe_remove_progress_and_attempts.py
prompts/: analyze.txt
