[project]
name = "talent-mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.0",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.0.0",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
]

[dependency-groups]
dev = ["ruff>=0.15.11"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C90"]
ignore = ["E501", "F401", "F403", "F405"]
indent-width = 2
